	* Unreleased *

	This release:
	- Significantly reduces the libpmem's stack usage.

Tue Aug 8 2023 Oksana Sałyk <oksana.salyk@intel.com>

	* Version 2.0.0

	This release :
	- Removes libpmemlog, libpmemblk, btt, and their support in (lib)pmempool
	- Removes Windows support
	- Removes FreeBSD support
	- Removes all pmem2_async operations (experimental)
	- Removes PowerPC and ARM architectures (experimental) from regular validation
	- Limits PMDK's static builds validation scope
	- Removes Fedora and Debian from regular validation
	- Adds reference platform provisioning instructions for PMDK testing
	- Identifies and temporarily disables tests permanently or sporadically failing in some configurations:
		- obj_pmalloc_mt (#5726)
		- obj_sync (#5643, #5646, #5699, #5705, #5706, #5727)
		- pmem2_vm_reservation (#5707)
		- pmempool_sync (#5708)
	- Re-enable pmem2_persist_valgrind tests previously excluded by mistake (#5855)

Wed May 31 2023 Oksana Sałyk <oksana.salyk@intel.com>

	* Version 1.13.1

	This release :
	- Identifies and temporarily disables tests permanently or sporadically
	failing in some configurations:
		- ex_libpmem2 (#5593, #5635, #5638, #5641)
		- obj_defrag_advanced (#5690)
		- obj_sync (#5643, #5646)
		- pmem2_future (#5596)
		- pmem2_map (#5600)
		- pmem2_map_prot (#5599)
		- pmem2_mem_ext (#5640)
		- pmem2_mover (partially fixed) (#5595, #5686, #5694)
		- pmem2_vm_reservation (#5592)

	- Fixes failing tests:
		- obj_tx_alloc_mt (#5680)
		- pmem2_map_from_existing (#5594)

	- Temporarily disable pmem2_badblock test (#5650) due to missing infrastructure
	(#5636, #5652)

	Other changes and notable bug fixes:
	- pmem2: fix valgrind instrumentation in pmem2_map_from_exisiting (#5605)
	- pmem2: remove data_mover memory leak (#5681, #5637)
	- test: update permissions of DAX devices after clearing bad blocks (#5611)
	- test: disable avx512f tests (pmem2_mem_ext) under Valgrind (#5658)

Wed Apr 26 2023 Łukasz Stolarczuk <lukasz.stolarczuk@intel.com>
